// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout scaffolds any other page 1`] = `
<DocumentFragment>
  <div
    class="Layout__Container-sc-1iaoog8-0 kefHsW"
  >
    <header
      class="Header__HeaderContainer-sc-1h5jhiv-0 fPyefU"
    >
      <a
        class="Header__LinkWrapper-sc-1h5jhiv-3 dXWzUE"
      >
        <img
          alt="The Manurepo"
          class="Header__HeaderImage-sc-1h5jhiv-1 dppRBg"
          src="/images/repo.svg"
        />
        <h2
          class="Header__H2-sc-1h5jhiv-4 dgzwDa"
        >
          The Manurepo
        </h2>
      </a>
    </header>
    <main />
    <div
      class="BackToHome__BackToHomeContainer-sc-1b2or72-0 bzyFly"
    >
      <a
        href="/"
      >
        ← Back to home
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout scaffolds the home page 1`] = `
<DocumentFragment>
  <div
    class="Layout__Container-sc-1iaoog8-0 kefHsW"
  >
    <header
      class="Header__HeaderContainer-sc-1h5jhiv-0 fPyefU"
    >
      <img
        alt="The Manurepo"
        class="Header__HeaderImage-sc-1h5jhiv-1 bASMFq"
        src="/images/repo.svg"
      />
      <h1
        class="Header__H1-sc-1h5jhiv-2 divOda"
      >
        The Manurepo
      </h1>
    </header>
    <main />
  </div>
</DocumentFragment>
`;
